feat: Add AI-powered chat assistant
Integrates a floating chat widget powered by Google Generative AI. This feature allows users to interact with an AI assistant for recommendations and information about the restaurant.

Includes installation of `react-markdown` and `remark-gfm` for rendering AI responses, and CSS styling for markdown content. Adds a new `ChatMessage` type to `types.ts` and includes the `FloatingChat` component in `App.tsx`.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             background: #4a4a4a;
             border-radius: 4px;
         }
+        .markdown-content h1, .markdown-content h2, .markdown-content h3 { font-family: 'Bodoni Moda', serif; margin-top: 1rem; margin-bottom: 0.5rem; color: white; }
+        .markdown-content p { margin-bottom: 0.75rem; }
+        .markdown-content ul { list-style-type: disc; padding-left: 1.25rem; margin-bottom: 0.75rem; }
+        .markdown-content li { margin-bottom: 0.25rem; }
+        .markdown-content strong { color: white; font-weight: 700; }
     </style>
 <script type="importmap">
 {
@@ -57,7 +62,9 @@
     "react": "https://esm.sh/react@^19.2.3",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "@google/genai": "https://esm.sh/@google/genai",
-    "leaflet": "https://esm.sh/leaflet@^1.9.4"
+    "leaflet": "https://esm.sh/leaflet@^1.9.4",
+    "react-markdown": "https://esm.sh/react-markdown@^9.0.1",
+    "remark-gfm": "https://esm.sh/remark-gfm@^4.0.0"
   }
 }
 </script>
