--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -15,6 +14,8 @@
             font-family: 'Montserrat', sans-serif;
             background-color: #1a1a1a;
             color: #e5e7eb;
+            margin: 0;
+            padding: 0;
         }
         .font-pistilli {
             font-family: 'Bodoni Moda', serif;
@@ -28,7 +29,6 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
-        /* Mapa en blanco y negro */
         .grayscale-map .leaflet-tile {
             filter: grayscale(100%) invert(100%) brightness(95%) contrast(90%);
         }
@@ -48,7 +48,12 @@
             background: #4a4a4a;
             border-radius: 4px;
         }
-        .markdown-content h1, .markdown-content h2, .markdown-content h3 { font-family: 'Bodoni Moda', serif; margin-top: 1rem; margin-bottom: 0.5rem; color: white; }
+        .markdown-content h1, .markdown-content h2, .markdown-content h3 { 
+            font-family: 'Bodoni Moda', serif; 
+            margin-top: 1rem; 
+            margin-bottom: 0.5rem; 
+            color: white; 
+        }
         .markdown-content p { margin-bottom: 0.75rem; }
         .markdown-content ul { list-style-type: disc; padding-left: 1.25rem; margin-bottom: 0.75rem; }
         .markdown-content li { margin-bottom: 0.25rem; }
@@ -57,14 +62,16 @@
 <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@google/genai": "https://esm.sh/@google/genai",
     "leaflet": "https://esm.sh/leaflet@^1.9.4",
-    "react-markdown": "https://esm.sh/react-markdown@^9.0.1",
-    "remark-gfm": "https://esm.sh/remark-gfm@^4.0.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
+    "remark-gfm": "https://esm.sh/remark-gfm@^4.0.1",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
@@ -72,5 +79,6 @@
 <body>
     <div id="root"></div>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
