--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <style>
         body {
             font-family: 'Montserrat', sans-serif;
-            background-color: #1a1a1a;
+            background-color: #121212;
             color: #e5e7eb;
             margin: 0;
             padding: 0;
+            overflow-x: hidden;
         }
         .font-pistilli {
             font-family: 'Bodoni Moda', serif;
