feat: add Tailwind CSS and Isotope layout support
- Updated package.json to include dependencies for Tailwind CSS, Isotope layout, and related types.
- Created index.css to set up Tailwind CSS styles and custom styles for the application.
- Added postcss.config.js for PostCSS configuration with Tailwind CSS and autoprefixer.
- Introduced a new favicon.svg for the application.
- Configured tailwind.config.js to specify content paths for Tailwind CSS.

--- a/index.html
+++ b/index.html
@@ -5,64 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>9 3/4 Burger - Estación de Sabor</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="9 3/4 Burger - Estación de Sabor" />
+    <meta property="og:description" content="Las mejores hamburguesas de la ciudad." />
+    <meta property="og:image" content="https://media.0221.com.ar/p/a7aff82c9bd709250de67477ba23c4f7/adjuntos/357/imagenes/100/161/0100161528/1400x0/smart/plaza-italia-monumento-aguila2jpg.jpg" />
+    
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="9 3/4 Burger - Estación de Sabor" />
+    <meta name="twitter:description" content="Las mejores hamburguesas de la ciudad." />
+    <meta name="twitter:image" content="https://media.0221.com.ar/p/a7aff82c9bd709250de67477ba23c4f7/adjuntos/357/imagenes/100/161/0100161528/1400x0/smart/plaza-italia-monumento-aguila2jpg.jpg" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400;0,6..96,900;1,6..96,400;1,6..96,900&family=Oswald:wght@400;700&family=Montserrat:wght@300;400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
-    <style>
-        body {
-            font-family: 'Montserrat', sans-serif;
-            background-color: #121212;
-            color: #e5e7eb;
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden;
-        }
-        .font-pistilli {
-            font-family: 'Bodoni Moda', serif;
-            letter-spacing: -0.05em;
-        }
-        .font-industrial {
-            font-family: 'Oswald', sans-serif;
-        }
-        .grayscale-map .leaflet-tile {
-            filter: grayscale(100%) invert(100%) brightness(95%) contrast(90%);
-        }
-        .leaflet-container {
-            background: #111 !important;
-        }
-        .leaflet-control-attribution {
-            display: none !important;
-        }
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #121212;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #4a4a4a;
-            border-radius: 4px;
-        }
-    </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "leaflet": "https://esm.sh/leaflet@^1.9.4",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
-  }
-}
-</script>
 </head>
 <body>
     <div id="root"></div>
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
